--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "rollup": "^4.52.4",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "~5.9.3",
